# ECE4078_5178_Practicals

./: README.md  pyproject.toml  requirements.txt
Week01-Representations/: Practical01_PositionAndOrientation.ipynb
Week02-Modelling/: Practical02_MobileRobots.ipynb
Week03-Control/: Practical03_Control.ipynb
Week03-Control/Support/: Renderer.py  Renderer1D.py  Robot.py
Week03-Control/Support/tests/: lqr.py  q1_accurate.py  q1_reached.py
Week04-Estimation/: Practical04_Localisation_Mapping.ipynb  Practical04_SLAMExercise.ipynb
Week04-Estimation/Support/: Robot.py  Robot_SLAM.py
Week05-Planning/: Practical04_Bug2.ipynb  Practical04_Exercise2.ipynb  Practical04_PRM.ipynb  Practical04_RRT.ipynb
Week06-Articulated-kinematics/: Practical06_ArticulatedRobots.ipynb
Week07-Articulated-dynamics/: Practical07_Dynamics.ipynb
Week07-Articulated-dynamics/Support/: visualizer.py
Week08-Learning/: Practical08_Learning.ipynb
Week09-Reinforcement-learning-1/: Practical09_IntroRL.ipynb  Practical09_ModelFreeRL.ipynb  README.md
Week10-Reinforcement-learning-2/: CodingExercise_DQNTarget.ipynb  Practical09_DeepRL.ipynb
