[project]
name = "ece4078-practicals"
version = "0.1.0"
description = "Practical notebooks and support code for ECE4078 Intelligent Robotics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "ipywidgets>=8.0",
    "opencv-python>=4.8",
    "gym>=0.26",
    "roboticstoolbox-python>=1.1",
    "spatialmath-python>=1.1",
    "torch>=2.2",
]

[tool.uv]
package = false
